Release Notes
=============


==== Jena 2.6.2

+ Colapse LiteralLabel and Node_Literal. 

+ Maven-style codebase layout.

+ Update to iri.jar (version 0.7). 

+ Change the way URIs are split into namespace and 
  local part so as to not split %-encoded sequences.

ARQ: removed from Jena development
  The following jars have been removed from the lib/ directory - they are only used by ARQ:
  arq.jar, arq-extra.jar, lucene-core-2.3.1.jar, json.jar, stax-api-1.0.jar, wstx-asl-3.0.0.jar 

(Jena 2.6.1 is an internal tag, not a release) 

==== Jena 2.6.0

** Codebase converted to Java 5

   o Convert to use SLF4J for logging facade 

   o Exceptions AlreadyExistsException, DoesNotExistException and
     RulesetNotFoundException no longer inherit via RDFRDBException

Jar changes:
   o Removed antlr-2.7.5.jar (no longer used)
   o Removed concurrent.jar (no longer used)
   o Removed xml-apis.jar (no longer used)
   o Removed commons-logging-1.1.1.jar
   o Add slf4j-api-1.5.6.jar, slf4j-log4j12.jar 
   o junit.jar upgraded to junit-4.5.jar

Deprecation clearance.
   Methods, classes and statics marked deprecated in previous releases have been largely removed.

ObjectF deprecations
  The interface ObjectF and the methods that use it have been deprecated.
  They are hangovers from before the time RDF acquired typed literals;
  nobody should be using them any more. They will be removed in the next
  Jena release.

Reasoners:
   o Extended validity checking for OWL configurations to include
     datatype range checking that can cope with user datatypes as done for RDFS.
     Places the culprit Triple as the ValidityReport.Report extension value.
   o Removed deprecated reasoners (RDFS1, RDFSExpt, OWLExpt) and associated support.
   o Fixed RDFS-SIMPLE to include properties being reflexive
   o Removed DIG 1.0 reasoner interface

JenaModelSpec:
   o This long-deprecated vocabulary (which supported the old ModelSpec system)