@@ -4,7 +4,7 @@ Release Notes
 
 ==== Jena 2.6.2
 
-+ Colapse LiteralLabel and Node_Literal. 
++ Collapse LiteralLabel and Node_Literal. 
 
 + Maven-style codebase layout.
 
@@ -13,6 +13,10 @@ Release Notes
 + Change the way URIs are split into namespace and 
   local part so as to not split %-encoded sequences.
 
+Reasoners:
+   o Fixed problems with pure forward rules generating functor values (fixed
+     looping behaviour, fixed selective filtering of functors).
+     
 ARQ: removed from Jena development
   The following jars have been removed from the lib/ directory - they are only used by ARQ:
   arq.jar, arq-extra.jar, lucene-core-2.3.1.jar, json.jar, stax-api-1.0.jar, wstx-asl-3.0.0.jar 
